# e_learning

./: .coverage  .coveragerc  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
apps/: pagination.py
apps/virtual_education/: apps.py  models.py  tasks.py  urls.py
apps/virtual_education/filters/: courses.py  enrollments.py  students.py
apps/virtual_education/migrations/: 0001_initial.py
apps/virtual_education/mixins/: datetime_format.py
apps/virtual_education/serializers/: courses.py  enrollments.py  students.py
apps/virtual_education/services/: courses.py  enrollments.py  students.py
apps/virtual_education/tests/: test_courses.py  test_enrollments.py  test_main.py  test_students.py
apps/virtual_education/tests/factories/: courses.py  enrollments.py  students.py
apps/virtual_education/views/: courses.py  enrollments.py  students.py
e_learning/: celery.py  celerybeat-schedule.py  settings.py  urls.py
